refactor: workflow_dispatch

--- a/.github/workflows/action-build.yml
+++ b/.github/workflows/action-build.yml
@@ -8,6 +8,8 @@ name: Appsmith Github Action Build Test
 
 on:
   workflow_dispatch:
+    branches:
+      - release
   # Ref: <https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows#release>.
   release:
     types:
