--- a/.github/workflows/action-build.yml
+++ b/.github/workflows/action-build.yml
@@ -234,86 +234,86 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      # - name: Build and push client image
-      #   uses: depot/build-push-action@v1
-      #   with:
-      #     context: app/client
-      #     push: true
-      #     tags: |
-      #       ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-editor:${{needs.prelude.outputs.tag}}
+      - name: Build and push client image
+        uses: depot/build-push-action@v1
+        with:
+          context: app/client
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-editor:${{needs.prelude.outputs.tag}}
 
       # Only build & tag with latest if the tag doesn't contain beta
-      # - name: Build and push client image latest
-      #   if: needs.prelude.outputs.is_beta == 'false'
-      #   uses: depot/build-push-action@v1
-      #   with:
-      #     context: app/client
-      #     push: true
-      #     tags: |
-      #       ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-editor:latest
+      - name: Build and push client image latest
+        if: needs.prelude.outputs.is_beta == 'false'
+        uses: depot/build-push-action@v1
+        with:
+          context: app/client
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-editor:latest
 
-      # - name: Build and push fat image
-      #   uses: depot/build-push-action@v1
-      #   with:
-      #     context: .
-      #     push: true
-      #     platforms: linux/arm64,linux/amd64
-      #     build-args: |
-      #       APPSMITH_SEGMENT_CE_KEY=${{ secrets.APPSMITH_SEGMENT_CE_KEY }}
-      #     tags: |
-      #       ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-ce:${{needs.prelude.outputs.tag}}
-
-      # Only build & tag with latest if the tag doesn't contain beta
-      # - name: Build and push fat image latest
-      #   if: needs.prelude.outputs.is_beta == 'false'
-      #   uses: depot/build-push-action@v1
-      #   with:
-      #     context: .
-      #     push: true
-      #     platforms: linux/arm64,linux/amd64
-      #     build-args: |
-      #       APPSMITH_SEGMENT_CE_KEY=${{ secrets.APPSMITH_SEGMENT_CE_KEY }}
-      #     tags: |
-      #       ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-ce:latest
-
-      # - name: Build and push server image
-      #   uses: depot/build-push-action@v1
-      #   with:
-      #     context: app/server
-      #     push: true
-      #     build-args: |
-      #       APPSMITH_SEGMENT_CE_KEY=${{ secrets.APPSMITH_SEGMENT_CE_KEY }}
-      #     tags: |
-      #       ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-server:${{needs.prelude.outputs.tag}}
+      - name: Build and push fat image
+        uses: depot/build-push-action@v1
+        with:
+          context: .
+          push: true
+          platforms: linux/arm64,linux/amd64
+          build-args: |
+            APPSMITH_SEGMENT_CE_KEY=${{ secrets.APPSMITH_SEGMENT_CE_KEY }}
+          tags: |
+            ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-ce:${{needs.prelude.outputs.tag}}
 
       # Only build & tag with latest if the tag doesn't contain beta
-      # - name: Build and push server image latest
-      #   if: needs.prelude.outputs.is_beta == 'false'
-      #   uses: depot/build-push-action@v1
-      #   with:
-      #     context: app/server
-      #     push: true
-      #     build-args: |
-      #       APPSMITH_SEGMENT_CE_KEY=${{ secrets.APPSMITH_SEGMENT_CE_KEY }}
-      #     tags: |
-      #       ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-server:latest
+      - name: Build and push fat image latest
+        if: needs.prelude.outputs.is_beta == 'false'
+        uses: depot/build-push-action@v1
+        with:
+          context: .
+          push: true
+          platforms: linux/arm64,linux/amd64
+          build-args: |
+            APPSMITH_SEGMENT_CE_KEY=${{ secrets.APPSMITH_SEGMENT_CE_KEY }}
+          tags: |
+            ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-ce:latest
 
-      # - name: Build and push RTS image
-      #   uses: depot/build-push-action@v1
-      #   with:
-      #     context: app/rts
-      #     push: true
-      #     tags: |
-      #       ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-rts:${{needs.prelude.outputs.tag}}
+      - name: Build and push server image
+        uses: depot/build-push-action@v1
+        with:
+          context: app/server
+          push: true
+          build-args: |
+            APPSMITH_SEGMENT_CE_KEY=${{ secrets.APPSMITH_SEGMENT_CE_KEY }}
+          tags: |
+            ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-server:${{needs.prelude.outputs.tag}}
 
       # Only build & tag with latest if the tag doesn't contain beta
-      # - name: Build and push RTS image latest
-      #   if: needs.prelude.outputs.is_beta == 'false'
-      #   uses: depot/build-push-action@v1
-      #   with:
-      #     context: app/rts
-      #     push: true
-      #     build-args: |
-      #       APPSMITH_SEGMENT_CE_KEY=${{ secrets.APPSMITH_SEGMENT_CE_KEY }}
-      #     tags: |
-      #       ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-rts:latest
+      - name: Build and push server image latest
+        if: needs.prelude.outputs.is_beta == 'false'
+        uses: depot/build-push-action@v1
+        with:
+          context: app/server
+          push: true
+          build-args: |
+            APPSMITH_SEGMENT_CE_KEY=${{ secrets.APPSMITH_SEGMENT_CE_KEY }}
+          tags: |
+            ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-server:latest
+
+      - name: Build and push RTS image
+        uses: depot/build-push-action@v1
+        with:
+          context: app/rts
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-rts:${{needs.prelude.outputs.tag}}
+
+      # Only build & tag with latest if the tag doesn't contain beta
+      - name: Build and push RTS image latest
+        if: needs.prelude.outputs.is_beta == 'false'
+        uses: depot/build-push-action@v1
+        with:
+          context: app/rts
+          push: true
+          build-args: |
+            APPSMITH_SEGMENT_CE_KEY=${{ secrets.APPSMITH_SEGMENT_CE_KEY }}
+          tags: |
+            ${{ secrets.DOCKER_HUB_ORGANIZATION }}/appsmith-rts:latest
