--- a/.github/workflows/echo-tag.yml
+++ b/.github/workflows/echo-tag.yml
@@ -50,4 +50,4 @@ jobs:
     steps:
       - name: Check Version Tag
         run: |
-          echo "TAG: $needs.prelude.outputs.tag"
+          echo ${{ steps.get_version.outputs.tag }}
