--- a/.github/workflows/echo-tag.yml
+++ b/.github/workflows/echo-tag.yml
@@ -48,6 +48,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check Version Tag
-        run: |
-          echo ${{ steps.get_version.outputs.tag }}
+      - name: Get Version
+        uses: battila7/get-version-action@v2
+      - run: echo ${{ steps.get_version.outputs.version }}
+      - run: echo ${{ steps.get_version.outputs.version-without-v }}
