--- a/app/server/docker-compose.yml
+++ b/app/server/docker-compose.yml
@@ -1,21 +1,21 @@
 version: "3.7"
 
 services:
-  appsmith-internal-server:
-    image: appsmith/appsmith-server:release
-    env_file: envs/docker.env
-    environment:
-      APPSMITH_REDIS_URL: "redis://redis:6379"
-      APPSMITH_MONGODB_URI: "mongodb://mongo:27017/appsmith"
-    ports:
-      - "8080:8080"
-    depends_on:
-      - mongo
-      - redis
-    networks:
-      - appsmith
-    volumes:
-      - ./container-volumes/git-storage:/data/git-storage
+  # appsmith-internal-server:
+  #   image: appsmith/appsmith-server:release
+  #   env_file: envs/docker.env
+  #   environment:
+  #     APPSMITH_REDIS_URL: "redis://redis:6379"
+  #     APPSMITH_MONGODB_URI: "mongodb://mongo:27017/appsmith"
+  #   ports:
+  #     - "8080:8080"
+  #   depends_on:
+  #     - mongo
+  #     - redis
+  #   networks:
+  #     - appsmith
+  #   volumes:
+  #     - ./container-volumes/git-storage:/data/git-storage
 
   mongo:
     image: mongo:4.4.6
@@ -25,11 +25,15 @@ services:
       - ./container-volumes/mongo:/data/db
     networks:
       - appsmith
+    ports:
+      - "27017:27017"
 
   redis:
     image: redis
     networks:
       - appsmith
+    ports:
+      - "6379:6379"
 
 networks:
   appsmith:
